onkelskrue/dole/dole-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dole-rc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dole
    spec:
      containers:
      - name: dole
        image: onkelskrue/dole:v1
        ports:
        - containerPort: 5002
        imagePullPolicy: Always
