onkelskrue/dole/dole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dole-svc
  labels:
    app: dole
spec:
  ports:
  - port: 5002
    targetPort: 5002
    protocol: TCP
    name: http
  selector:
    app: dole
